--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-numeric-input": "^2.2.3",
+    "react-scripts": "2.1.8",
+    "victory": "^32.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
