--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://greencastle94.github.io/CO2e-budget-planner-tool"
 }
