--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-numeric-input": "^2.2.3",
@@ -11,8 +10,6 @@
     "victory": "^32.0.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,5 +24,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://greencastle94.github.io/CO2e-budget-planner"
+  "homepage": "https://greencastle94.github.io/CO2e-budget-planner-tool"
 }
